Fixed link animation, Hero image fade, text alignment

--- a/styles/_molecules.scss
+++ b/styles/_molecules.scss
@@ -6,6 +6,8 @@ header[role=banner] {
   background-repeat: no-repeat;
   background-position: center;
   padding: 2em 0;
+  -webkit-mask-image: radial-gradient(circle, black, transparent);
+  mask-image: radial-gradient(circle, black, transparent);
     :is(h1, h2) {
       font-size: 2.5em;
       font-weight: 900;
@@ -15,7 +17,7 @@ header[role=banner] {
       background-clip: text;
       color: transparent;
       background-size: 400%;
-      animation: bg-animation 1.5s infinite alternate;
+      animation: bg-animation 1000ms infinite alternate;
     }
   }
 
