--- a/styles/style.scss
+++ b/styles/style.scss
@@ -46,7 +46,7 @@ header {
 
 div.supporting > *:not(footer) {
     max-width: 800px;
-    justify-self: center;
+    // justify-self: center;
 }
 
 section.intro > div {
@@ -85,31 +85,21 @@ section.intro > div {
 }
 
 aside[role=complementary] {
-    // grid-area: hero;
     grid-row: 1 / 3;
-    // align-self: center;
     margin-top: 250px;
     margin-bottom: 100px;
     height: fit-content;
     grid-column: 7/9;
-    // grid-area: side-bar2;
     position: sticky;
     top: 0;
     margin-right: 20%;
 }
 
 footer {
-    // border: 5px dotted hotpink;
     display: flex;
     gap: 1em;
     justify-content: center;
     grid-area: end;
-    // width: min(100%, 1020px);
-    // position: relative;
-    // right: 100px;
-    // top: 10px;
-    // transform: translate(-100px, 10px);
-    // overflow: hidden;
 }
 
 :is(main, footer) {
